// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<Button
  onClick={[Function]}
>
  <Component
    className="css-1yjiefr"
    onClick={[Function]}
  >
    <button
      className="css-1yjiefr"
      onClick={[Function]}
    >
      <span
        aria-label="so cool"
        role="img"
      >
        😀 😎 👍 💯
      </span>
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Another Button with text 1`] = `
<Button
  onClick={[Function]}
>
  <Component
    className="css-1yjiefr"
    onClick={[Function]}
  >
    <button
      className="css-1yjiefr"
      onClick={[Function]}
    >
      Hello Button
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<Button
  onClick={[Function]}
>
  <Component
    className="css-1yjiefr"
    onClick={[Function]}
  >
    <button
      className="css-1yjiefr"
      onClick={[Function]}
    >
      <span
        aria-label="so cool"
        role="img"
      >
        😀 😎 👍 💯
      </span>
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Button with text 1`] = `
<Button
  onClick={[Function]}
>
  <Component
    className="css-1yjiefr"
    onClick={[Function]}
  >
    <button
      className="css-1yjiefr"
      onClick={[Function]}
    >
      Hello Button
    </button>
  </Component>
</Button>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<Welcome
  showApp={[Function]}
>
  <Welcome__Main>
    <article
      className="css-1fqbdip"
    >
      <Welcome__Title>
        <h1
          className="css-nil"
        >
          Welcome to storybook
        </h1>
      </Welcome__Title>
      <p>
        This is a UI component dev environment for your app.
      </p>
      <p>
        We've added some basic stories inside the 
        <Welcome__InlineCode>
          <code
            className="css-mteq83"
          >
            src/stories
          </code>
        </Welcome__InlineCode>
         directory.
        <br />
        A story is a single state of one or more UI components. You can have as many stories as you want.
        <br />
        (Basically a story is like a visual test case.)
      </p>
      <p>
        See these sample 
        <Welcome__NavButton
          onClick={[Function]}
        >
          <button
            className="css-1opliz7"
            onClick={[Function]}
          >
            stories
          </button>
        </Welcome__NavButton>
         for a component called
         
        <Welcome__InlineCode>
          <code
            className="css-mteq83"
          >
            Button
          </code>
        </Welcome__InlineCode>
        .
      </p>
      <p>
        Just like that, you can add your own components as stories.
        <br />
        You can also edit those components and see changes right away.
        <br />
        (Try editing the 
        <Welcome__InlineCode>
          <code
            className="css-mteq83"
          >
            Button
          </code>
        </Welcome__InlineCode>
         stories located at
         
        <Welcome__InlineCode>
          <code
            className="css-mteq83"
          >
            src/stories/index.js
          </code>
        </Welcome__InlineCode>
        .)
      </p>
      <p>
        Usually we create stories with smaller UI components in the app.
        <br />
        Have a look at the
         
        <Welcome__Link
          href="https://storybook.js.org/basics/writing-stories"
          rel="noopener noreferrer"
          target="_blank"
        >
          <a
            className="css-ca0824"
            href="https://storybook.js.org/basics/writing-stories"
            rel="noopener noreferrer"
            target="_blank"
          >
            Writing Stories
          </a>
        </Welcome__Link>
         
        section in our documentation.
      </p>
      <Welcome__Note>
        <p
          className="css-bwdon3"
        >
          <b>
            NOTE:
          </b>
          <br />
          Have a look at the 
          <Welcome__InlineCode>
            <code
              className="css-mteq83"
            >
              .storybook/webpack.config.js
            </code>
          </Welcome__InlineCode>
           to add webpack loaders and plugins you are using in this project.
        </p>
      </Welcome__Note>
    </article>
  </Welcome__Main>
</Welcome>
`;
